redirect with message if email sent

--- a/html/style.css
+++ b/html/style.css
@@ -272,3 +272,28 @@ video.video {
      object-position: 50% 50%;
   width: 100%;
   height: 100%; }
+
+  /* The alert message box */
+.alert {
+  padding: 20px;
+  background-color: #4CAF50; /* Green */
+  color: white;
+  margin-bottom: 15px;
+}
+
+/* The close button */
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+/* When moving the mouse over the close button */
+.closebtn:hover {
+  color: black;
+} 
